Updated button to download run info / measurements.

--- a/web/attpcdaq/templates/daq/measurement_chart.html
+++ b/web/attpcdaq/templates/daq/measurement_chart.html
@@ -9,6 +9,11 @@
         <div class="panel-heading">
             <span>
                 <span>Measurements</span>
+                <div class="pull-right">
+                <a class="btn btn-default btn-xs" href="{% url 'daq/download_run_metadata' %}">
+                    <span class="fa fa-download"></span> Download as CSV
+                </a>
+            </div>
             </span>
         </div>
         <table class="table table-bordered">
