--- a/web/attpcdaq/static/css/site.less
+++ b/web/attpcdaq/static/css/site.less
@@ -296,3 +296,14 @@ a > .icon-btn:hover {
 .drag-handle, .drag-handle:hover {
     cursor: move;
 }
+
+.table > tbody > tr.dragging {
+  background-color: white;
+  border: none;
+  border-radius: 0;
+  .shadow;
+
+  td, th {
+    border: none;
+  }
+}
