Set up webpack.

--- a/web/attpcdaq/templates/daq/status_page/data_router_status_panel.html
+++ b/web/attpcdaq/templates/daq/status_page/data_router_status_panel.html
@@ -38,7 +38,7 @@
 {#    </table>#}
 </div>
 
-<script src="{% static 'js/data_router_status-compiled.js' %}"></script>
+{#<script src="{% static 'js/data_router_status-compiled.js' %}"></script>#}
 
 {#<script>#}
 {#    // Sets the indicator to a check mark if status is true, or an X otherwise#}
