--- a/web/attpcdaq/templates/daq/status_page/ecc_server_status_panel.html
+++ b/web/attpcdaq/templates/daq/status_page/ecc_server_status_panel.html
@@ -89,7 +89,7 @@
 {#    </table>#}
 </div>
 
-<script src="{% static 'js/ecc_status-compiled.js' %}"></script>
+{#<script src="{% static 'js/ecc_status-compiled.js' %}"></script>#}
 
 {#<script>#}
 {#    // Returns a class to set the color of the status label#}
