Added build for frontend.

--- a/web/attpcdaq/static/css/site.less
+++ b/web/attpcdaq/static/css/site.less
@@ -1,4 +1,6 @@
 @import 'https://fonts.googleapis.com/css?family=Lato:300,400,400i,700';
+@import (inline) 'bootstrap.css';
+@import (inline) 'font-awesome.css';
 
 @top-navbar-height: 50px;
 @navcolor: #222733;
