--- a/web/attpcdaq/templates/base.html
+++ b/web/attpcdaq/templates/base.html
@@ -6,14 +6,10 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}AT-TPC DAQ{% endblock %}</title>
-
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/site.css' %}">
 
-    <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-
+    <script src="{% static 'js/build/jquery.min.js' %}"></script>
+    <script src="{% static 'js/build/bootstrap.min.js' %}"></script>
     {% block scripts %}{% endblock %}
 </head>
 <body>
