--- a/web/attpcdaq/templates/daq/status.html
+++ b/web/attpcdaq/templates/daq/status.html
@@ -5,5 +5,5 @@
 
 {% block body %}
     <div id="status-page-app">Loading...</div>
-    <script src="{% static 'js/build/status_page.js' %}"></script>
+    <script src="{% static 'js/build/app.js' %}"></script>
 {% endblock %}
