Reimplementing all of frontend in React.

--- a/web/attpcdaq/static/less/site.less
+++ b/web/attpcdaq/static/less/site.less
@@ -152,11 +152,11 @@ body {
     color: white;
   }
 
-  .active {
-      a, a:hover, a:active {
-        color: white;
-        background-color: @navcolor;
-      }
+  li > a.active,
+  li > a.active:hover,
+  li > a.active:active {
+    color: white;
+    background-color: @navcolor;
   }
 }
 
