Experiment choice page, form, decorator.

--- a/web/attpcdaq/templates/base.html
+++ b/web/attpcdaq/templates/base.html
@@ -64,7 +64,7 @@
                                 <span class="fa fa-user"></span> {{ user.experiment.name }} ({{ user.username }}) <span class="fa fa-caret-down"></span>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right">
-                                <li><a href="{% url 'daq/experiment_settings' %}">Experiment settings</a></li>
+                                <li><a href="{% url 'daq/choose_experiment' %}">Choose experiment</a></li>
                                 <li><a href="/admin">Administration</a></li>
                                 <li><a href="{% url 'accounts/logout' %}">Log out</a></li>
                             </ul>
